fine tune exception handler(s), remove firstname & lastname from user